refactor: improve wording
Signed-off-by: Chris Laprun <claprun@redhat.com>